# excel-tauri

./: package-lock.json  package.json
.github/workflows/: tauri-macos.yml
input/: exportData — копия.xlsx  exportData.xlsx
src/: App.css  App.tsx
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/src/: file_io.rs  helpers.rs  lib.rs  main.rs  models.rs
src/helpers/: select-file.ts
src/hooks/: useGetVerion.tsx
